# mesos-demo

./: CMakeLists.txt  README.md  dc-up.sh  docker-compose.yml  setup-environment.sh  unset-environment.sh
framework/: CMakeLists.txt  Dockerfile  dc-up.sh  docker-compose.yml  job-manager.py
job-manager/: CMakeLists.txt  README.md  example-marathon.json  job-manager.py  wandisco-svn.repo
message-service/: dc-up.sh  docker-compose.yml
scripts/: agent.conf  get-message-service-gateway.sh  rabbitmq.environment  setup-environment.sh  start-agents.sh  start-all.sh  start-marathon.sh  start-mesos-agents.sh  start-mesos-master.sh  start-message-service.sh  stop-agents.sh  stop-all.sh  stop-marathon.sh  stop-mesos-agents.sh  stop-mesos-master.sh  stop-message-service.sh  unset-environment.sh
scripts/environment/: docker  mesos  message-service  worker
work-manager/: CMakeLists.txt  Dockerfile  example-marathon.json  work-manager.py
worker/: CMakeLists.txt  Dockerfile  README.md  demo-worker.py  example-worker.py
